--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 		<span id="csoutput"></span>
 		
-		<script src="cstut.js"></script>
+		<script src="first-coffee.js"></script>
 	
 	</body>
 
